tests/compile-fail/stacked_borrows/invalidate_against_barrier1.stderr
error: Undefined Behavior: not granting access to tag <untagged> because incompatible item is protected: [Unique for <1905> (call 611)]
  --> $DIR/invalidate_against_barrier1.rs:5:25
   |
LL |     let _val = unsafe { *x }; //~ ERROR protect
   |                         ^^ not granting access to tag <untagged> because incompatible item is protected: [Unique for <1905> (call 611)]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `inner` at $DIR/invalidate_against_barrier1.rs:5:25
note: inside `main` at $DIR/invalidate_against_barrier1.rs:12:5
  --> $DIR/invalidate_against_barrier1.rs:12:5
   |
LL |     inner(xraw, xref);
   |     ^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

